[Backend] fix: 매주 월요일마다 테스트코드가 깨지던 문제를 해결
- ranking-test-data.sql 날짜 계산식 수정